 * improved Makefile to switch easily between root and user mode.
 * created Makefile.pmk
 * updated pmkcfg.sh and pmkfile to sync with Makefile changes.
 * synced pmkscan, pmksetup and premake.h with usermode changes.
 * updated README and INSTALL.
 * fixed pmk_switches() and missing escape in pmkfile.
 * bunch of fixes and cosmetics changes before next snapshot.

26 Sep 2003 mipsator
 * added support to negate labels in conditions like DEPEND or IF.
 * updated pmkfile.5 to sync with latest changes.
 * fixed pmk_switches() for use of bool type.

25 Sep 2003 mipsator
 * added prs_get_line(), parse_node(), parse_command() and parse_line() to
	allow use of real nodes (aka commands into another command).
 * rewritten parse_pmkfile() to use new functions.
 * updated test/parser_test.c to sync with latest changes.
 * added pmk_ifcond() into func.c to manage new 'IF' keyword.
 * updated pmkfile sample to use 'IF' keyword.

22 Sep 2003 mipsator
 * added small support for DEFS.

# snapshot 0.6.4

20 Sep 2003 mipsator
 * added ac_set_variables() in autoconf.
 * added autoconf compatibility stuff for byte order.

19 Sep 2003 mipsator
 * made syntax more simple, now all the checks use NAME for the main
	target (example in CHECK_TYPE, NAME contain the type to check).
 * added CHECK_HEADER which does the same thing as CHECK_INCLUDE which
	is obsolete but kept for compatibility.
 * added pmk_check_variable() tu support CHECK_VARIABLE.
 * updated pmkfile.5 man page to sync with previous changes.
 * updated pmkfile sample.

18 Sep 2003 mipsator
 * improved str_to_dynary() to init and return dynary structure.
 * updated use of str_to_dynary in func, funtool, pmk and pmksetup.
 * changed syntax of path variables in pmk configuration file.
 * updated func.c to match with new PATH_* variables but kept the
	compatibility with old format.
 * added warnings for obsolete variables in both pmk and pmksetup.
 * updated pmk.conf.5 to match with PATH_* variables.